testsuite/bsc.scheduler/resource/ResourceOneRuleCSE2.bs.bsc-sched-out.expected
checking package dependencies
compiling ResourceOneRuleCSE2.bs
code generation for sysResourceOneRuleCSE2 starts
Error: "ResourceOneRuleCSE2.bs", line 12, column 17: (G0004)
  Rule `RL_unnamed' uses methods that conflict in parallel:
    r.write(...)
  and
    r.write(...)
  For the complete expressions use the flag `-show-range-conflict'.
=== schedule:
Nothing

-----

Schedule dump file created: sysResourceOneRuleCSE2.sched
=== Generated schedule for sysResourceOneRuleCSE2 ===

Rule schedule
-------------
Rule: unnamed
Predicate: True
 

======================================================
